force-app/main/default/objects/Approval_Request__c/Approval_Request__c.object-meta.xml
<CustomObject>
    <description>This object was created as the standard Salesforce Approval Process does not satisfy the business&#39;s needs. This object has been built in a scalable manner and extends the standard Salesforce Approval Process through a series of customizable Flows, Email Alerts and In-App Notifications.

Ex: You are not able to customize the Approval Rejection screen. You cannot add a custom field to it. The business needs the ability to specify and report on a rejected Approval Request&#39;s Rejection Reasons.</description>
    <label>Approval Request</label>
    <nameField>
        <label>Approval Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approval Requests</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>