force-app/main/default/objects/Approval_Request__c/fields/Count_of_Rejections__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Rejections__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Count of Rejections</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>