force-app/main/default/objects/Approval_Request__c/fields/Est_Annualized_Sales_USD__c.field-meta.xml
<CustomField>
    <fullName>Est_Annualized_Sales_USD__c</fullName>
    <formula>Opportunity__r.Annualized_Sales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Est. Annualized Sales (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>