force-app/main/default/objects/Approval_Request__c/fields/Est_EBITDA__c.field-meta.xml
<CustomField>
    <fullName>Est_EBITDA__c</fullName>
    <formula>Opportunity__r.EBITDA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Est. EBITDA %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>