force-app/main/default/objects/Approval_Request__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This will only be populated for Approval Requests that are Quote Approvals. This will be blank for Assessments.</description>
    <inlineHelpText>This will only be populated for Approval Requests that are Quote Approvals. This will be blank for Assessments.</inlineHelpText>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Approval Requests</relationshipLabel>
    <relationshipName>Approval_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>