force-app/main/default/objects/Approval_Request__c/fields/Quote_Est_EBITDA__c.field-meta.xml
<CustomField>
    <fullName>Quote_Est_EBITDA__c</fullName>
    <formula>Quote__r.Est_EBITDA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Est. EBITDA %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>