force-app/main/default/objects/Approval_Request__c/fields/Quote_Site__c.field-meta.xml
<CustomField>
    <fullName>Quote_Site__c</fullName>
    <formula>TEXT(Quote__r.Site__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Site</label>
    <type>Text</type>
</CustomField>