force-app/main/default/objects/Approval_Request__c/fields/Submission_Comments__c.field-meta.xml
<CustomField>
    <fullName>Submission_Comments__c</fullName>
    <label>Submission Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>