force-app/main/default/objects/Approval_Request__c/listViews/Open_Requests.listView-meta.xml
<ListView>
    <fullName>Open_Requests</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Submitted,Resubmitted</value>
    </filters>
    <label>Open Requests</label>
</ListView>